Archive2/19/d2246366b7c1f8/output
In file included from /usr/local/include/c++/5.1.0/random:35:0,
                 from main.cpp:5:
/usr/local/include/c++/5.1.0/bits/c++0x_warning.h:32:2: error: #error This file requires compiler and library support for the ISO C++ 2011 standard. This support is currently experimental, and must be enabled with the -std=c++11 or -std=gnu++11 compiler options.
 #error This file requires compiler and library support for the \
  ^
main.cpp: In function 'int main()':
main.cpp:11:5: error: 'random_device' is not a member of 'std'
     std::random_device rd;
     ^
main.cpp:14:5: error: 'default_random_engine' is not a member of 'std'
     std::default_random_engine e1(rd());
     ^
main.cpp:15:5: error: 'uniform_int_distribution' is not a member of 'std'
     std::uniform_int_distribution<int> uniform_dist(1, 6);
     ^
main.cpp:15:35: error: expected primary-expression before 'int'
     std::uniform_int_distribution<int> uniform_dist(1, 6);
                                   ^
main.cpp:16:29: error: 'e1' was not declared in this scope
     int mean = uniform_dist(e1);
                             ^
main.cpp:16:31: error: 'uniform_dist' was not declared in this scope
     int mean = uniform_dist(e1);
                               ^
main.cpp:20:5: error: 'mt19937' is not a member of 'std'
     std::mt19937 e2(rd());
     ^
main.cpp:21:5: error: 'normal_distribution' is not a member of 'std'
     std::normal_distribution<> normal_dist(mean, 2);
     ^
main.cpp:21:30: error: expected primary-expression before '>' token
     std::normal_distribution<> normal_dist(mean, 2);
                              ^
main.cpp:21:51: error: 'normal_dist' was not declared in this scope
     std::normal_distribution<> normal_dist(mean, 2);
                                                   ^
main.cpp:25:16: error: 'round' is not a member of 'std'
         ++hist[std::round(normal_dist(e2))];
                ^
main.cpp:25:16: note: suggested alternative:
In file included from /usr/include/features.h:357:0,
                 from /usr/local/include/c++/5.1.0/x86_64-unknown-linux-gnu/bits/os_defines.h:39,
                 from /usr/local/include/c++/5.1.0/x86_64-unknown-linux-gnu/bits/c++config.h:482,
                 from /usr/local/include/c++/5.1.0/iostream:38,
                 from main.cpp:1:
/usr/include/x86_64-linux-gnu/bits/mathcalls.h:311:1: note:   'round'
 __MATHCALLX (round,, (_Mdouble_ __x), (__const__));
 ^
main.cpp:25:39: error: 'e2' was not declared in this scope
         ++hist[std::round(normal_dist(e2))];
                                       ^
main.cpp:28:10: warning: 'auto' changes meaning in C++11; please remove it [-Wc++0x-compat]
     for (auto p : hist) {
          ^
main.cpp:28:15: error: 'p' does not name a type
     for (auto p : hist) {
               ^
main.cpp:32:1: error: expected ';' before '}' token
 }
 ^
main.cpp:32:1: error: expected primary-expression before '}' token
main.cpp:32:1: error: expected ';' before '}' token
main.cpp:32:1: error: expected primary-expression before '}' token
main.cpp:32:1: error: expected ')' before '}' token
main.cpp:32:1: error: expected primary-expression before '}' token
